test/resource/valid/expresion.ftl
<#assign foo = 1>
<#if "'" == "1">
  foo = 1
</#if>
<#if '"' == "'">
  foo = 1
</#if>
