test/resource/invalid/setting.ftl
<#setting locale="en_US" locale="en_US">
